--- a/codeacross2016.css
+++ b/codeacross2016.css
@@ -55,7 +55,14 @@
     letter-spacing: 7px;
 }
 
-.text_h2 {font-weight: 100;margin-bottom: 4%; line-height: 4.5rem;}
+
+.text_h2 {
+    font-weight: 100;
+    margin-bottom: 4%;
+    line-height: 4rem;
+    margin-top: 0;
+    font-size: 2.5rem;
+}  
 
 .span_h2 {font-weight: 300;color: #2196F3;}
 
