--- a/codeacross2016.css
+++ b/codeacross2016.css
@@ -65,6 +65,7 @@
 }  
 
 .span_h2 {font-weight: 300;color: #2196F3;}
+.span_h5 {font-weight: 300;color: #2196F3;}
 
 .text_b{color: #2196F3;}
 
@@ -74,6 +75,15 @@
     color: #2196F3;
     font-size: 7rem;
     display: block;
+}
+
+.card-image-title {
+	position: absolute;
+    color: white;
+    z-index: 9;
+    right: 0;
+    background-color: rgba(33, 150, 243, 0.5);
+    padding: 10px 20px;	
 }
 .card-content a {color: #2196F3;}
 
@@ -301,4 +311,6 @@ footer.page-footer {
 }
 
 .partners .logo { max-width: 100%; }
+
+.block-end { margin-bottom: 40px; }
 
