--- a/codeacross2016.css
+++ b/codeacross2016.css
@@ -274,6 +274,10 @@ nav a.button-collapse {
     margin: 15px 0px;
 }
 
+.card .card-content .card-title {
+    line-height: 24px;
+}
+
 .card-avatar .card-content i {
    font-size: 1.5rem;
 }
